@@ -1,17 +1,16 @@
-FROM node:fermium-alpine3.16 as builde_fe
+FROM node:20-alpine AS builder_fe
 WORKDIR /
 COPY webVowl ./
 RUN npm install
 RUN npm run build
 
-
-FROM openjdk:11-jdk-slim as builder_be
+FROM eclipse-temurin:21-jdk-jammy AS builder_be
 WORKDIR /app
 COPY ./owl2vowl /app
-COPY --from=builde_fe ./deploy ../webVowl/deploy
-RUN ./gradlew clean build 
+COPY --from=builder_fe ./deploy ../webVowl/deploy
+RUN ./gradlew --no-daemon clean build
 
-FROM openjdk:11-jdk-slim
+FROM eclipse-temurin:21-jre-jammy
 USER 1001
 COPY --from=builder_be /app/build/libs/owl2vowl.war /owl2vowl.war
-CMD ["java", "-jar", "/owl2vowl.war"]
+CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/owl2vowl.war"]
